--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,13 +14,14 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .header-title h1 {
-  font-size: map-get($font-sizes, small);
+  font-size: map-get($font-sizes, regular);
   letter-spacing: 5px;
   color: $cyan-400;
 }
 
 .main__container {
-  width: 61%;
+  width: 51%;
+
   max-width: 1055px;
   background-color: $white;
   @include flexCenter(row);
